@@ -6,6 +6,7 @@ com.sun.ws.rest.impl.provider.entity.DataSourceProvider
 com.sun.ws.rest.impl.provider.entity.MimeMultipartProvider
 com.sun.ws.rest.impl.provider.entity.AtomFeedProvider
 com.sun.ws.rest.impl.provider.entity.AtomEntryProvider
+com.sun.ws.rest.impl.provider.entity.FormMultivaluedMapProvider
 com.sun.ws.rest.impl.provider.entity.FormURLEncodedProvider
 com.sun.ws.rest.impl.provider.entity.XMLJAXBElementProvider
 com.sun.ws.rest.impl.provider.entity.JSONJAXBElementProvider
